<resources>
    <string name="app_name">NSSApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here.</string>
    <string name="password">Password</string>
    <string name="Phone">Phone number</string>
    <string name="already">Already Registered?Login Here</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="idno">Id Number</string>
    <string name="room">Room Number</string>

    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_id">enter a valid ID Number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_fail">Registered Failed</string>
    <string name="login_success">Login Success</string>
    <string name="empty">Enter "NOTHING" if nothing is taught</string>
    <string name="Enter_success">Enter Success</string>
    <string name="Enter_fail">Enter fail</string>


    <string name="login_fail">Login Fail</string>


    <string name="input_error_room">enter a valid Room Number</string>


    <!-- TODO: Remove or change this placeholder text -->


</resources>
