<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context="com.example.nssapp.activity.register">


    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignBottom="@+id/cardView"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="55dp"
        android:autofillHints=""
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignStart="@+id/cardView">

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/transparent"
                android:text="@string/register"
                android:textColor="#ffff"
                android:textSize="23sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="32dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"

        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:text="@string/already"
        android:textColor="#ffff"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"

        android:id="@+id/linearLayout"
        tools:ignore="RtlHardcoded,UnknownIdInLayout" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@+id/editText"

        android:layout_centerHorizontal="true"


        android:layout_marginBottom="8dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:ems="10"
        android:hint="@string/Phone"

        android:inputType="phone"
        android:textColor="#ffff"
        android:textColorHint="#ffff" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@+id/editText11"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_email_black_24dp"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#ffff"
        android:textColorHint="#ffff" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@+id/editText8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:textColor="@color/white"
        android:hint="@string/idno"
        android:background="#11000000"

        android:inputType="textPersonName"
        android:textColorHint="#ffff" />


    <EditText
        android:id="@+id/editText11"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_above="@+id/editText10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_room_black_24dp"
        android:textColor="@color/white"
        android:hint="@string/room"
        android:background="#11000000"

        android:inputType="textPersonName"
        android:textColorHint="#ffff" />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />


</RelativeLayout>
